[package]
name = "cryptography-learning-backend"
version = "0.1.0"
authors = ["zickshen <zickshen@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.0"
async-graphql-actix-web = "2.0"
actix-web = "3.2"
actix-rt = "1.1.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
structopt = "0.3"
env_logger = "0.7"
dotenv = "0.15"