[package]
name = "cryptography-learning-backend"
version = "0.1.0"
authors = ["zickshen <zickshen@tencent.com>"]
edition = "2018"

[dependencies]
async-graphql = "2.0"
warp = "0.2.0"
async-graphql-warp = "2.1.0"
tokio = { version = "0.2", features = ["macros", "fs"] }
http = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
structopt = "0.3"
pretty_env_logger = "0.4"
dotenv = "0.15"
ron = "*"