[package]
name = "cryptography-learning-backend"
version = "0.1.1"
authors = ["CSUwangj <CSUwangj@protonmail.com>"]
edition = "2021"
rust-version = "1.64"

[dependencies]
async-graphql = "2.0"
warp = "0.3.0"
async-graphql-warp = "2.1.0"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros", "fs"] }
http = "0.2"
thiserror = "1.0"
dashmap = "3.11"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
structopt = "0.3"
pretty_env_logger = "0.4"
dotenv = "0.15"
ron = "*"